Upgrade kilda-gui on Java 17